syntax = "proto3";

package filgths;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";


option go_package = "github.com/f0mster/flights/gen/proto";

service FlightsFinder {
    rpc GetEndpoint (GetEndpointReq) returns (GetEndpointResp) {
        option (google.api.http) = {
            post: "/twirp/FlightsFinder/GetEndpoint"
            body: "*"
        };
    };
}

message Flight {
    string from = 1;
    string to = 2;
}

message GetEndpointReq {
    repeated Flight flights = 1;
}

message GetEndpointResp {
    string from = 1;
    string to = 2;
}
